fix tasks overlap on banner

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -16,10 +16,10 @@
 header {
   position: sticky;
   top: 0;
+  z-index: 1;
   background-color: rgba($bg-color, 0.8);
   padding: 0 1rem;
   justify-content: space-between;
   display: flex;
-  flex-direction: row;
   box-shadow: $box-shadow;
 }
